# libproplink-cpp

./: .gitignore  CMakeLists.txt  README.md  property.proto  rebuild.ps1
cmake/: FindZeroMQ.cmake  proplinkConfig.cmake.in
include/: client.h  core.h  property.pb.h  server.h  thread_pool.h
include/libproplink/: client.h  core.h  property.pb.h  server.h  thread_pool.h
include/proplink/: client.h  core.h  server.h
src/: client.cpp  client_example.cpp  property.pb.cc  server.cpp  server_example.cpp  thread_pool.cpp
temp(socketpool)/: client.cpp  client.h  client_example.cpp  server.cpp  server.h  server_example.cpp  socket_pool.cpp  socket_pool.h  thread_pool.cpp
temp(zero-copy)/: client.cpp  client.h  core.h  server.cpp  server.h
